# COM2016-01

./: .gitignore  COM2016-01.code-workspace  README.md  pyproject.toml
.devcontainer/: devcontainer.json
practice/: README.md
practice/src/: test_cpp.cpp
socket/: CMakeLists.txt  README.md
socket/src/: client.cpp  server.cpp  util.hpp
socket/test/: fixtures.py  test_both.py  test_client.py  test_server.py
term/: .bazelrc  .gitignore  WORKSPACE
term/scripts/: cmd_db.sh  install.sh
term/src/cli/: BUILD  error.cpp  error.h  parser.cpp  parser.h  token.cpp  token.h
term/src/client/: BUILD  client.cpp
term/src/logging/: BUILD  logging.hpp
term/src/mychat/: BUILD  README.md  _new_syscall_tbl  mychat.hpp
term/src/protocol/: BUILD  packet.hpp  protocol.hpp
term/src/server/: BUILD  server.cpp
term/tests/: BUILD
term/tests/cli/: test_parser.cpp  test_token.cpp
