[tool.poetry]
name = "com2016-01"
version = "0.1.0"
description = ""
authors = ["Taein Min <maintain0404@gmail.com>"]
readme = "README.md"
packages = [{include = "com2016_01"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.263"
black = "^23.3.0"
mypy = "^1.2.0"
pytest-asyncio = "^0.21.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
